modified CSS to resemble calc

--- a/index.html
+++ b/index.html
@@ -4,14 +4,41 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Odin-Calculator</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   Hello world
-  <div class= "calc-body">
-    a
+  <div class = "calc-body">
+    <div class = "row">
+      <div class = "display">1234567</div>
+      <button type = "button" id = "clears">C</button>
+    </div>
+    <div class = "row">
+      <button type = "button">7</button>
+      <button type = "button">8</button>
+      <button type = "button">9</button>
+      <button type = "button" id = "divides">÷</button>
+    </div>
+    <div class = "row">
+      <button type = "button">4</button>
+      <button type = "button">5</button>
+      <button type = "button">6</button>
+      <button type = "button" id = "multiplies">×</button>
+    </div>
+    <div class = "row">
+      <button type = "button">1</button>
+      <button type = "button">2</button>
+      <button type = "button">3</button>
+      <button type = "button" id = "subtracts">−</button>
+    </div>
+    <div class = "row">
+      <button type = "button">0</button>
+      <button type = "button">.</button>
+      <button type = "button" id = "equals">=</button>
+      <button type = "button" id = "adds">+</button>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
