--- a/index.html
+++ b/index.html
@@ -9,38 +9,37 @@
 </head>
 
 <body>
-  Hello world
   <div class = "calc-body">
     <div class = "row">
-      <div class = "display">1234567</div>
+      <div class = "display"><span id = "result"></span></div>
       <button type = "button" id = "clears">C</button>
     </div>
     <div class = "row">
-      <button type = "button">7</button>
-      <button type = "button">8</button>
-      <button type = "button">9</button>
+      <button type = "button" id = "btn7">7</button>
+      <button type = "button" id = "btn8">8</button>
+      <button type = "button" id = "btn9">9</button>
       <button type = "button" id = "divides">÷</button>
     </div>
     <div class = "row">
-      <button type = "button">4</button>
-      <button type = "button">5</button>
-      <button type = "button">6</button>
+      <button type = "button" id = "btn4">4</button>
+      <button type = "button" id = "btn5">5</button>
+      <button type = "button" id = "btn6">6</button>
       <button type = "button" id = "multiplies">×</button>
     </div>
     <div class = "row">
-      <button type = "button">1</button>
-      <button type = "button">2</button>
-      <button type = "button">3</button>
+      <button type = "button" id = "btn1">1</button>
+      <button type = "button" id = "btn2">2</button>
+      <button type = "button" id = "btn3">3</button>
       <button type = "button" id = "subtracts">−</button>
     </div>
     <div class = "row">
-      <button type = "button">0</button>
-      <button type = "button">.</button>
+      <button type = "button" id = "btn0">0</button>
+      <button type = "button" id = "btnDot">.</button>
       <button type = "button" id = "equals">=</button>
       <button type = "button" id = "adds">+</button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 
 </html>
